# Langchain_Development_Projects

./: .coveragerc  .env.example  .gitignore  CI_CD_IMPLEMENTATION.md  CODEOWNERS  README.md  TESTING_IMPLEMENTATION_SUMMARY.md  conftest.py  pytest.ini  requirements-base.txt
.github/: copilot-instructions.md  planner-agent.agent.md  test-agent.agent.md
.github/prompts/: planner.prompt.md  playground_use-case.prompt.md  quick-reference.prompt.md
.github/workflows/: copilot-implement.yml  deploy.yml  teams-notification.yml  test.yml
Playground/: 01_Weather_Reporting_Agent.md
Quick-Reference/: 01_What_Is_Agentic_AI.md  02_ReAct_Pattern_Deep_Dive.md  03_RAG_Retrieval_Augmented_Generation.md  04_Ollama.md
cli/: README.md  pyproject.toml
cli/ai_agent_builder/: __init__.py  cli.py  config.py  env_manager.py  scaffold.py  template_renderer.py  version.py
cli/ai_agent_builder/integrations/: __init__.py  base.py  registry.py
cli/ai_agent_builder/integrations/caching/: redis.py
cli/ai_agent_builder/integrations/observability/: langfuse.py
cli/ai_agent_builder/integrations/orchestration/: __init__.py  awx.py
cli/ai_agent_builder/integrations/vector_stores/: __init__.py  chroma.py  faiss.py  pgvector.py
cli/ai_agent_builder/templates/custom/: main.py.j2  test_main.py.j2
cli/ai_agent_builder/templates/integrations/awx/: README.md.j2  credentials.yml.j2  playbook.yml.j2  survey.json.j2
cli/ai_agent_builder/templates/integrations/pgvector/: schema.sql.j2
cli/ai_agent_builder/templates/integrations/redis/: cache.py.j2
cli/ai_agent_builder/templates/langgraph/: README.md.j2  main.py.j2
cli/ai_agent_builder/templates/lcel/: README.md.j2  conftest.py.j2  env.example.j2  main.py.j2  requirements.txt.j2
cli/langchain_dev/: __init__.py  cli.py  config.py  env_manager.py  scaffold.py  template_renderer.py  version.py
cli/langchain_dev/integrations/: __init__.py  base.py
cli/langchain_dev/integrations/caching/: __init__.py  redis.py
cli/langchain_dev/integrations/observability/: __init__.py  langfuse.py
cli/langchain_dev/integrations/vector_stores/: __init__.py  chroma.py  faiss.py
cli/langchain_dev/templates/custom/: main.py.j2
cli/langchain_dev/templates/integrations/chroma/: vector_store.py.j2
cli/langchain_dev/templates/integrations/faiss/: vector_store.py.j2
cli/langchain_dev/templates/integrations/langfuse/: tracing.py.j2
cli/langchain_dev/templates/integrations/pgvector/: vector_store.py.j2
cli/langchain_dev/templates/langgraph/: conftest.py.j2  main.py.j2
cli/langchain_dev/templates/lcel/: README.md.j2  main.py.j2
cli/tests/: test_awx_integration.py
common/: __init__.py  awx_utils.py  awx_wrapper.py  exceptions.py  langfuse_tracing.py  llm_factory.py  pyproject.toml  rate_limiter.py  retry.py  token_counter.py  utils.py  vault.py
common/cache/: __init__.py  in_memory.py
common/prompts/: __init__.py  base_prompts.py
common/tests/: conftest.py  test_awx_utils.py  test_awx_wrapper.py  test_cache.py  test_exceptions.py  test_langfuse_tracing.py  test_llm_factory.py  test_rate_limiter.py  test_retry.py  test_token_counter.py  test_utils.py  test_vault.py
docs/: Agentic_AI_Framework_Executive_Presentation.pptx  TESTING_STRATEGY.md  ci-cd-diagrams.md  ci-cd-quickref.md  ci-cd.md  cli_fixes.md  contributing.md  getting_started.md  github-environment-setup.md  langfuse.md  llm_factory.md  models.md  prerequisites.md  sdk.md  teams-notification-sample.json  teams-notifications-quickref.md  teams-notifications-setup-checklist.md  teams-notifications.md  testing.md  vault.md
planner/: 01_Weather_Reporting_Agent.md  02_Github_Issue_Reporter_Agent.md
projects/01_hello_langchain/: .env.example  README.md  requirement-jupyter-notebook.txt  requirements.txt
projects/01_hello_langchain/src/: main.py
projects/01_hello_langchain/tests/: conftest.py  test_main.py
projects/02_automation_maturity_model/: From_Playbooks_to_Agents_Executive_Deck.pptx  index.html
projects/03_weather_reporting_agent/: README.md  requirements.txt
projects/03_weather_reporting_agent/src/: main.py
projects/03_weather_reporting_agent/tests/: conftest.py  test_main.py  test_weather_agent.py
projects/04_github_issue_reporter/: .env.example  GitHub_Issue_Reporter_Executive_Presentation.pptx  PRESENTATION_GUIDE.md  README.md  repos.json.example  requirements.txt
projects/04_github_issue_reporter/awx/: AWX_WINDOWS_SETUP.md  ENV_FILE_INTEGRATION.md  PSRP_FIX_GUIDE.md  QUICK_FIX.md  README.md  credentials.yml  import_survey_api.py  playbook.yml  playbook_windows.yml  survey.json
projects/04_github_issue_reporter/src/: main.py
projects/04_github_issue_reporter/tests/: conftest.py  test_github_reporter.py  test_main.py  test_multi_repo.py
scripts/: generate_github_issue_reporter_presentation.py
