[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agent-common"
version = "0.1.0"
description = "Shared utilities for AI Agent Builder projects (LLM factory, logging, prompts)"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
    "hvac>=2.0.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["common", "common/cache", "common/prompts"]
